plugins {
    id "java-gradle-plugin"
    id "java"
    id "groovy"
    id 'com.apollographql.apollo' version '4.3.3'
}

sourceCompatibility = JavaVersion.VERSION_17

repositories {
    gradlePluginPortal()
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = []
        }
        groovy {
            srcDirs += ["src/main/java"]
        }
    }
}

gradlePlugin {
    plugins {
        checkAntoraVersion {
            id = "org.springframework.antora.check-version"
            implementationClass = "org.springframework.gradle.antora.CheckAntoraVersionPlugin"
        }
        trang {
            id = "trang"
            implementationClass = "trang.TrangPlugin"
        }
        locks {
            id = "locks"
            implementationClass = "lock.GlobalLockPlugin"
        }
        updateDependencies {
            id = "org.springframework.security.update-dependencies"
            implementationClass = "org.springframework.security.convention.versions.UpdateDependenciesPlugin"
        }
        sagan {
            id = "org.springframework.security.sagan"
            implementationClass = "org.springframework.gradle.sagan.SaganPlugin"
        }
        s101 {
            id = "s101"
            implementationClass = "s101.S101Plugin"
        }
    }
}

configurations {
    implementation {
        exclude module: 'groovy-all'
    }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'com.thaiopensource:trang:20091111'
    implementation 'net.sourceforge.saxon:saxon:9.1.0.8'
    implementation 'org.yaml:snakeyaml:1.33'
    implementation localGroovy()

    implementation 'io.projectreactor:reactor-core:3.8.7'
    implementation (libs.org.gretty.gretty) {
        exclude group: 'org.springframework.boot', module: 'spring-boot-loader-tools'
    }
    implementation 'com.apollographql.apollo:apollo-runtime:4.3.3'
    implementation 'com.github.ben-manes:gradle-versions-plugin:0.53.0'
    implementation 'com.github.spullara.mustache.java:compiler:0.9.14'
    implementation libs.io.spring.javaformat.spring.javaformat.gradle.plugin
    implementation libs.io.spring.gradle.spring.security.project.plugin
    implementation libs.io.spring.nohttp.nohttp.gradle
    implementation 'net.sourceforge.htmlunit:htmlunit:2.70.0'
    implementation 'org.asciidoctor:asciidoctor-gradle-jvm:4.0.5'
    implementation 'org.hidetake:gradle-ssh-plugin:2.10.1'
    implementation libs.org.springframework.spring.core
    implementation libs.org.sonarsource.scanner.gradle.sonarqube.gradle.plugin

    testImplementation platform(libs.org.junit.junit.bom)
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testImplementation "org.junit.jupiter:junit-jupiter-params"
    testImplementation "org.junit.jupiter:junit-jupiter-engine"
    testImplementation libs.org.apache.commons.commons.io
    testImplementation libs.org.assertj.assertj.core
    testImplementation libs.org.mockito.mockito.core
    testImplementation libs.org.mockito.mockito.junit.jupiter
    testImplementation "com.squareup.okhttp3:mockwebserver:5.3.2"
}


tasks.named('test', Test).configure {
    onlyIf { !project.hasProperty("buildSrc.skipTests") }
    useJUnitPlatform()
    jvmArgs(
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    )
}
